--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
